Added social media links

--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@ layout: default
           experienced divers, and we cater for all levels of experience.
         </p>
         <p>
-          For more information, please check out the schedule below or browse
-          our
+          For more information, please check out our 
+          <a href="https://m.facebook.com/MUSACDiving/" target="_blank">Facebook</a>&nbsp;
+          and 
+          <a href="https://www.instagram.com/musac.uk/" target="_blank">Instagram</a>&nbsp;
+          pages or browse our
           <a href="faq.html">Frequently Asked Questions (FAQ)</a>.
         </p>
       </div>
