--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@ layout: default
         </p>
         <p>
           For more information, please check out our 
-          <a href="https://m.facebook.com/MUSACDiving/" target="_blank">Facebook</a>&nbsp;
+          <a href="https://m.facebook.com/MUSACDiving/">Facebook</a>&nbsp;
           and 
-          <a href="https://www.instagram.com/musac.uk/" target="_blank">Instagram</a>&nbsp;
+          <a href="https://www.instagram.com/musac.uk/">Instagram</a>&nbsp;
           pages or browse our
           <a href="faq.html">Frequently Asked Questions (FAQ)</a>.
         </p>
